tests/ui/imports/glob-conflict-cross-crate-1.stderr
error[E0425]: cannot find function `f` in crate `glob_conflict`
  --> $DIR/glob-conflict-cross-crate-1.rs:6:20
   |
LL |     glob_conflict::f();
   |                    ^ not found in `glob_conflict`
   |
help: consider importing this function
   |
LL + use glob_conflict::glob::f;
   |
help: if you import `f`, refer to it directly
   |
LL -     glob_conflict::f();
LL +     f();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
